deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ingress-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress

  template:
    metadata:
      labels:
        app: traefik-ingress

    spec:
      serviceAccountName: traefik-ingress-service-account
      containers:
        - name: traefik-ingress
          image: traefik:v2.2
          ports:
            - name: http
              containerPort: 80

            - name: https
              containerPort: 443

            - name: admin
              containerPort: 8080

          volumeMounts:
            - name: static-config
              mountPath: /etc/traefik

      volumes:
        - name: static-config
          configMap:
            name: traefik-ingress-config
