05-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: traefik-ingress

spec:
  type: LoadBalancer
  selector:
    app: traefik-ingress

  ports:
    - name: http
      protocol: TCP
      port: 80

    - name: https
      protocol: TCP
      port: 443

    - name: admin
      protocol: TCP
      port: 8080
