service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
spec:
  type: LoadBalancer
  selector:
    app: traefik-ingress
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: traefik
      protocol: TCP
      port: 8080
