06-ingress-route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-auth
  namespace: traefik-ingress

spec:
  basicAuth:
    secret: admin-auth-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-dashboard-redirect
  namespace: traefik-ingress

spec:
  redirectRegex:
    permanent: true
    regex: ^(.*)/$
    replacement: ${1}/dashboard/

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-route
  namespace: traefik-ingress

spec:
  entryPoints: ["admin"]
  routes:
    - match: Path(`/`)
      kind: Rule
      middlewares:
        - name: admin-dashboard-redirect

      services:
        - name: dashboard@internal
          kind: TraefikService
          port: 8080

    - match: PathPrefix(`/api`) || PathPrefix(`/dashboard`)
      kind: Rule
      middlewares:
        - name: admin-auth

      services:
        - name: api@internal
          kind: TraefikService
          port: 8080
